* everything except list and component are finished

--- a/resources/hidden.htm
+++ b/resources/hidden.htm
@@ -1,1 +1,1 @@
-<input type='hidden' name="{{@self->fullId()}}" id="{{@self->fullId()}}" class='ff_input_submit' value='{{htmlspecialchars( @default )}}' />
+<input type='hidden' name="{{@self->fullId()}}" id="{{@self->fullId()}}" class='ff_input_submit' value='{{@default}}' />
