And now tiny MCE only loads once at the start of the form :-)

--- a/resources/form.htm
+++ b/resources/form.htm
@@ -1,3 +1,4 @@
 <form method='POST'<check if='{{isset(@self->options["action"])}}'><true> action='{{@self->options["action"]}}'</true></check>>
 			{{@form_content | raw}}
 </form>
+<script type="text/javascript">ff_init();</script>
