--- a/resources/htmlarea.htm
+++ b/resources/htmlarea.htm
@@ -2,4 +2,4 @@
 <check if="{{@self->hasOption( 'rows' )}}"><true> rows="{{@self->options['rows']}}"</true></check>
 <check if="{{@self->hasOption( 'cols' )}}"><true> cols="{{@self->options['cols']}}"</true></check>
 >{{@default}}</textarea>
-<script type="text/javascript">ff_initWysiwyg( '{{@self->fullID()}}' );</script>
+<exclude><script type="text/javascript">ff_initWysiwyg( '{{@self->fullID()}}' );</script></exclude>
