--- a/resources/submit.htm
+++ b/resources/submit.htm
@@ -1,1 +1,1 @@
-<input type='submit' name="{{@self->fullId()}}" id="{{@self->fullId()}}" class='ff_input_submit' value='{{@self->options["title"]}}' />
+<input type='submit' name="{{@self->fullId()}}" id="{{@self->fullId()}}" class='ff_input_submit' value='{{@self->options["text"]}}' />
